--- a/freyberg_mf6_api_demo.ipynb
+++ b/freyberg_mf6_api_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e66c2705",
+   "id": "943a1bcd",
    "metadata": {},
    "source": [
     "In this notebook, we will see a very simple demonstration of using the MODFLOW-6 API capability for, you guessed, the Freyberg model...\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1c12eb9",
+   "id": "d164e5dd",
    "metadata": {},
    "source": [
     "We can use pre-compiled mf6 binaries"
@@ -45,18 +45,24 @@
     "if \"linux\" in platform.platform().lower():\n",
     "    lib_path = os.path.join(\"bin\",\"linux\",\"libmf6.so\")\n",
     "    exe_path = os.path.join(\"bin\",\"linux\",\"mf6\")\n",
+    "    lib_name = os.path.split(lib_path)[-1]\n",
+    "    exe_name = \"./\"+os.path.split(exe_path)[-1]\n",
     "elif \"darwin\" in platform.platform().lower() or \"macos\" in platform.platform().lower() :\n",
     "    lib_path = os.path.join(\"bin\",\"mac\",\"libmf6.so\")\n",
     "    exe_path = os.path.join(\"bin\",\"mac\",\"mf6\")\n",
+    "    lib_name = os.path.split(lib_path)[-1]\n",
+    "    exe_name = \"./\"+os.path.split(exe_path)[-1]\n",
     "else:\n",
     "    lib_path = os.path.join(\"bin\",\"win\",\"libmf6.dll\")\n",
-    "    exe_path = os.path.join(\"bin\",\"win\",\"mf6.exe\")     \n",
+    "    exe_path = os.path.join(\"bin\",\"win\",\"mf6.exe\")  \n",
+    "    lib_name = os.path.split(lib_path)[-1]\n",
+    "    exe_name = os.path.split(exe_path)[-1]\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7fc5d4ea",
+   "id": "ce940e73",
    "metadata": {},
    "source": [
     "Copy the original model files to a working dir and get the binaries into that dir"
@@ -75,14 +81,12 @@
     "    shutil.rmtree(work_dir)\n",
     "shutil.copytree(org_dir,work_dir)\n",
     "shutil.copy2(lib_path,os.path.join(work_dir,os.path.split(lib_path)[-1]))\n",
-    "shutil.copy2(exe_path,os.path.join(work_dir,os.path.split(exe_path)[-1]))\n",
-    "lib_name = os.path.split(lib_path)[-1]\n",
-    "exe_name = os.path.split(exe_path)[-1]"
+    "shutil.copy2(exe_path,os.path.join(work_dir,os.path.split(exe_path)[-1]))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8ba05e64",
+   "id": "aa10b291",
    "metadata": {},
    "source": [
     "Now just run standard mf6"
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "299d35d9",
+   "id": "f56a0dff",
    "metadata": {},
    "source": [
     "Now lets see how the API is used - first just replicate the standard MF6 solution"
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bb7cddd",
+   "id": "7593c5d2",
    "metadata": {},
    "source": [
     "Create a `ModflowApi` instance for our model and initialize it"
@@ -145,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b36b4c28",
+   "id": "0c02c2b1",
    "metadata": {},
    "source": [
     "Now march thru the stress periods and solve as usual..."
@@ -197,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8318c496",
+   "id": "67b62b39",
    "metadata": {},
    "source": [
     "Now let's do something more exciting.  We can use the API interface to build in operational rules for the pumping wells.  If the sfr downstream flow for the terminal reach is too low, we need to pump less, if the flow is high, we can pump more."
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d10d5b7",
+   "id": "936eab28",
    "metadata": {},
    "source": [
     "Now we use march thru stess periods as before, but within the outer iteration loop, we will attempt some \"management\" to link the groundwater extraction rates to surface-water flow.  If the surface-water flow at the terminal downstream reach is less than 2,500, reduce the pumping rates.  Otherwise, if the surface-water flow is greater than 3,000, lets pump more!"
@@ -314,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a09829b",
+   "id": "3034081d",
    "metadata": {},
    "source": [
     "Woah - that drastically increased the number of iterations - we are working the solver here with some strong nonlinearity!"
@@ -334,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4f98dda",
+   "id": "db01f4ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56415f3e",
+   "id": "696c3106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1920412",
+   "id": "773c9e34",
    "metadata": {},
    "source": [
     "We can see the effect of our \"management\" strategy:  substantially more gw is extracted during the wet season while less groundwater is extracted during the dry season compared to the original simulation (that used constant extraction).  And we see that this contributes to less groundwater contribution to surface water during the wet season."
@@ -371,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20efb052",
+   "id": "83f4e06a",
    "metadata": {},
    "outputs": [],
    "source": []
