--- a/freyberg_mf6_api_demo.ipynb
+++ b/freyberg_mf6_api_demo.ipynb
@@ -271,16 +271,6 @@
     "    # solve until converged\n",
     "    while kiter < max_iter:\n",
     "        \n",
-    "        # if we have solved at least once and the solution is converged\n",
-    "        if gwf.solve(1) and kiter > 1:\n",
-    "            # get the sfr dsflow rate for the last reach\n",
-    "            addr = [\"DSFLOW\", \"FREYBERG6\", \"SFR_1\"]\n",
-    "            wbaddr = gwf.get_var_address(*addr)\n",
-    "            sfr_dsflow = gwf.get_value(wbaddr)\n",
-    "            print(\"flow stress period,time step {0},{1} converged with {2} iters, final sfr:{3:5.2f}\".\\\n",
-    "                  format(stress_period,time_step, kiter,sfr_dsflow[-1]))\n",
-    "            break\n",
-    "        \n",
     "        # get the sfr dsflow rate for the last reach\n",
     "        addr = [\"DSFLOW\", \"FREYBERG6\", \"SFR_1\"]\n",
     "        wbaddr = gwf.get_var_address(*addr)\n",
@@ -294,15 +284,29 @@
     "        org = np.sum(wel_bound)\n",
     "        \n",
     "        # if the flow is too low, turn down the wells\n",
+    "        fac = 1\n",
     "        if sfr_dsflow[-1] < 2500:\n",
-    "            wel_bound[:] *= 0.8\n",
+    "            fac = sfr_dsflow[-1]/2500\n",
+    "            wel_bound[:] *= fac\n",
     "        \n",
     "        #otherewise if there is extra flow, turn up the wells\n",
     "        elif sfr_dsflow[-1] > 3000:\n",
-    "            wel_bound[:] *= 1.5\n",
+    "            fac = sfr_dsflow[-1]/3000\n",
+    "            wel_bound[:] *= fac\n",
     "        \n",
-    "        print(\"  ---  iter:{0}, sfr:{1:5.2f} org wel:{2:5.2f} new wel:{3:5.2f}\".\\\n",
-    "              format(kiter,sfr_dsflow[-1],org,np.sum(wel_bound)))\n",
+    "        # if we have solved at least once and the solution is converged\n",
+    "        if gwf.solve(1) and kiter > 1:\n",
+    "            # get the sfr dsflow rate for the last reach\n",
+    "            addr = [\"DSFLOW\", \"FREYBERG6\", \"SFR_1\"]\n",
+    "            wbaddr = gwf.get_var_address(*addr)\n",
+    "            sfr_dsflow = gwf.get_value(wbaddr)\n",
+    "            print(\"flow stress period,time step {0},{1} converged with {2} iters, final sfr:{3:5.2f}\".\\\n",
+    "                  format(stress_period,time_step, kiter,sfr_dsflow[-1]))\n",
+    "            break\n",
+    "        \n",
+    "        \n",
+    "        print(\"  ---  iter:{0}, sfr:{1:5.2f} org wel:{2:5.2f} new wel:{3:5.2f} fac:{4:2.1f}\" .\\\n",
+    "              format(kiter,sfr_dsflow[-1],org,np.sum(wel_bound),fac))\n",
     "        kiter += 1\n",
     "    try:\n",
     "        gwf.finalize_solve(1)\n",
@@ -313,7 +317,7 @@
     "    gwf.finalize_time_step()\n",
     "    # update current sim time\n",
     "    ctime = gwf.get_current_time()\n",
-    "  "
+    "gwf.finalize()"
    ]
   },
   {
@@ -343,7 +347,8 @@
    "outputs": [],
    "source": [
     "oinc,ocum = lst_org.get_dataframes(diff=True)\n",
-    "ainc,acum = lst_api.get_dataframes(diff=True)\n"
+    "ainc,acum = lst_api.get_dataframes(diff=True)\n",
+    "ainc"
    ]
   },
   {
@@ -363,6 +368,14 @@
     "axes[1].legend()\n",
     "axes[1].set_title(\"sw-gw flux\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca032c43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
